--- a/code.ipynb
+++ b/code.ipynb
@@ -713,14 +713,14 @@
         "preds"
       ],
       "metadata": {
-        "id": "nD9WaBJAGtsg",
-        "outputId": "1dd452c5-2234-4fdb-8060-5a9e0f4ff9d1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "nD9WaBJAGtsg",
+        "outputId": "b0e0f8aa-6846-4518-cec6-dd2b9c53af2e"
       },
       "id": "nD9WaBJAGtsg",
-      "execution_count": 12,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -748,7 +748,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 21
         }
       ]
     },
@@ -758,11 +758,11 @@
         "!pip install evaluate"
       ],
       "metadata": {
-        "id": "uuWJQCBYErnx",
-        "outputId": "443ac57a-6837-4d3d-871e-0979f14ae994",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "uuWJQCBYErnx",
+        "outputId": "443ac57a-6837-4d3d-871e-0979f14ae994"
       },
       "id": "uuWJQCBYErnx",
       "execution_count": 10,
@@ -822,8 +822,6 @@
         "metric.compute(predictions=preds, references=predictions.label_ids)"
       ],
       "metadata": {
-        "id": "LUQZeeIeEk_X",
-        "outputId": "62fc9cfb-2cd3-4c4b-901d-dde8ae767792",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 66,
@@ -840,7 +838,9 @@
             "933f33c2ff78418eb1298e79d99e9c1a",
             "e4b5770daa5842e1b216cb5352bbc973"
           ]
-        }
+        },
+        "id": "LUQZeeIeEk_X",
+        "outputId": "62fc9cfb-2cd3-4c4b-901d-dde8ae767792"
       },
       "id": "LUQZeeIeEk_X",
       "execution_count": 11,
@@ -885,6 +885,154 @@
       },
       "id": "wQDWpDkNGdb1",
       "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "training_args = TrainingArguments(\"test-trainer\", eval_strategy=\"epoch\")\n",
+        "model = AutoModelForSequenceClassification.from_pretrained(checkpoint, num_labels=2)\n",
+        "\n",
+        "trainer = Trainer(\n",
+        "    model,\n",
+        "    training_args,\n",
+        "    train_dataset=tokenized_datasets[\"train\"],\n",
+        "    eval_dataset=tokenized_datasets[\"validation\"],\n",
+        "    data_collator=data_collator,\n",
+        "    processing_class=tokenizer,\n",
+        "    compute_metrics=compute_metrics,\n",
+        ")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "v1Se1bklIFr6",
+        "outputId": "04526abe-1ed1-4059-a288-5970b77e3686"
+      },
+      "id": "v1Se1bklIFr6",
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
+            "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "trainer.train()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 222
+        },
+        "id": "DyqVeuoDIVW5",
+        "outputId": "fef814f0-dc7a-45e9-eb97-f57d9f5ab670"
+      },
+      "id": "DyqVeuoDIVW5",
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "\n",
+              "    <div>\n",
+              "      \n",
+              "      <progress value='1377' max='1377' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+              "      [1377/1377 05:05, Epoch 3/3]\n",
+              "    </div>\n",
+              "    <table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              " <tr style=\"text-align: left;\">\n",
+              "      <th>Epoch</th>\n",
+              "      <th>Training Loss</th>\n",
+              "      <th>Validation Loss</th>\n",
+              "      <th>Accuracy</th>\n",
+              "      <th>F1</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <td>1</td>\n",
+              "      <td>No log</td>\n",
+              "      <td>0.499100</td>\n",
+              "      <td>0.747549</td>\n",
+              "      <td>0.841782</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>2</td>\n",
+              "      <td>0.501700</td>\n",
+              "      <td>0.637917</td>\n",
+              "      <td>0.828431</td>\n",
+              "      <td>0.877193</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>3</td>\n",
+              "      <td>0.247700</td>\n",
+              "      <td>0.814716</td>\n",
+              "      <td>0.848039</td>\n",
+              "      <td>0.893471</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table><p>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "TrainOutput(global_step=1377, training_loss=0.29861669048677775, metrics={'train_runtime': 306.1629, 'train_samples_per_second': 35.942, 'train_steps_per_second': 4.498, 'total_flos': 405114969714960.0, 'train_loss': 0.29861669048677775, 'epoch': 3.0})"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "training_args = TrainingArguments(\n",
+        "    \"test-trainer\",\n",
+        "    eval_strategy=\"epoch\",\n",
+        "    fp16=True,  # Enable mixed precision\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "tCEvViEQOZca"
+      },
+      "id": "tCEvViEQOZca",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "training_args = TrainingArguments(\n",
+        "    \"test-trainer\",\n",
+        "    eval_strategy=\"epoch\",\n",
+        "    per_device_train_batch_size=4,\n",
+        "    gradient_accumulation_steps=4,  # Effective batch size = 4 * 4 = 16\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "l5MTanzIOl0o"
+      },
+      "id": "l5MTanzIOl0o",
+      "execution_count": null,
       "outputs": []
     }
   ],
