Learning Rate Scheduling

--- a/code.ipynb
+++ b/code.ipynb
@@ -1034,6 +1034,23 @@
       "id": "l5MTanzIOl0o",
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "training_args = TrainingArguments(\n",
+        "    \"test-trainer\",\n",
+        "    eval_strategy=\"epoch\",\n",
+        "    learning_rate=2e-5,\n",
+        "    lr_scheduler_type=\"cosine\",  # Try different schedulers\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "BjJwukzKOxK7"
+      },
+      "id": "BjJwukzKOxK7",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
